[tool.poetry]
name = "weather-products"
version = "0.1.0"
description = "Weather products targeted towards snow forecasts in Western US"
authors = ["Daniel Zurawski <djzurawski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
requests-futures = "^1.0.0"
cartopy = "^0.18.0"
netCDF4 = "^1.5.3"
haversine = "^2.3.0"
wrf-python = "^1.3.1"
MetPy = "^1.0"
cfgrib = "^0.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
