[tool.poetry]
name = "weather-products"
version = "0.1.0"
description = "Weather products targeted towards snow forecasts in Western US"
authors = ["Daniel Zurawski <djzurawski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
